# draw_convex_hull

./: .clang-format  .gitignore  CMakeLists.txt  README.md  drawLines.pro  main.cpp  pre-commit.sh  quick-build.sh
.github/workflows/: ci-format-test.yml  clang-format.yml
include/: ConvexHull.h  DelaunayTriangulator.h  DirectedAcyclicNode.h  Edge.h  FastConvexHull.h  HalfEdge.h  PointInPolygon.h  RowColumnMatrix.h  SlowConvexHull.h  SquareMatrix.h  Triangle.h  TriangleWithOneSymbolicPoint.h  TriangleWithTwoSymbolicPoints.h  Vector2D.h  Vertex.h
include/impl/: DelaunayTriangulator.cpp  DirectedAcyclicNode.cpp  HalfEdge.cpp  RowColumnMatrix.cpp  SquareMatrix.cpp  Triangle.cpp  TriangleWithOneSymbolicPoint.cpp  TriangleWithTwoSymbolicPoints.cpp  Vector2D.cpp  Vertex.cpp
include/util/: simulation.cpp
resources/: crossiant.csv
src/: Edge.cpp  FastConvexHull.cpp  PointInPolygon.cpp  SlowConvexHull.cpp  Vector2D.cpp  concave2DPointCloud.cpp  main.cpp
test/: CMakeLists.txt  DelaunayTriangulationTests.cpp  DirectedAcyclicGraphTests.cpp  GeometryAndMathTests.cpp  convexHullTests.cpp  pointInPolygonTests.cpp
